--- a/packageManifest.json
+++ b/packageManifest.json
@@ -3,7 +3,8 @@
 	"minimumHEVersion": "2.1.9",
 	"author": "Dominick Meglio",
 	"version": "1.1.0",
-	"dateReleased": "2020-04-08",
+	"dateReleased": "2020-04-15",
+	"releaseNotes": "Added supportedThermostatModes and supportedThermostatFanModes support."
 	"documentationLink": "https://github.com/dcmeglio/hubitat-rheem/blob/master/README.md",
 	"apps" : [
 		{
