--- a/packageManifest.json
+++ b/packageManifest.json
@@ -2,10 +2,11 @@
 	"packageName": "Rheem EcoNet Integration",
 	"minimumHEVersion": "2.1.9",
 	"author": "Dominick Meglio",
-	"version": "1.1.1",
-	"dateReleased": "2020-04-20",
-	"releaseNotes": "Fixed a bug that prevented oauth refresh tokens from working.",
+	"version": "1.2.0",
+	"dateReleased": "2020-04-26",
+	"releaseNotes": "Added setWaterHeaterMode command and waterHeaterMode attribute to set the water heater mode directly instead of the thermostat mode.",
 	"documentationLink": "https://github.com/dcmeglio/hubitat-rheem/blob/master/README.md",
+	"communityLink": "https://community.hubitat.com/t/release-rheem-econet-integration/37338",
 	"apps" : [
 		{
 			"id" : "b118bb1e-8b68-4058-8566-435d69ca0ea9",
