--- a/packageManifest.json
+++ b/packageManifest.json
@@ -2,9 +2,9 @@
 	"packageName": "Rheem EcoNet Integration",
 	"minimumHEVersion": "2.1.9",
 	"author": "Dominick Meglio",
-	"version": "1.2.2",
-	"dateReleased": "2020-05-01",
-	"releaseNotes": "Fixed an issue with some gas water heaters that do not report the current temperature.",
+	"version": "1.3.0",
+	"dateReleased": "2020-05-04",
+	"releaseNotes": "Made the polling interval configurable.",
 	"documentationLink": "https://github.com/dcmeglio/hubitat-rheem/blob/master/README.md",
 	"communityLink": "https://community.hubitat.com/t/release-rheem-econet-integration/37338",
 	"apps" : [
