--- a/packageManifest.json
+++ b/packageManifest.json
@@ -2,9 +2,9 @@
 	"packageName": "Rheem EcoNet Integration",
 	"minimumHEVersion": "2.1.9",
 	"author": "Dominick Meglio",
-	"version": "1.3.0",
-	"dateReleased": "2020-05-04",
-	"releaseNotes": "Made the polling interval configurable.",
+	"version": "2.0.0",
+	"dateReleased": "2020-06-05",
+	"releaseNotes": "Converted everything to Rheem's new MQTT based API.\nA consequence of this is the current water temperature and ambient temperature are no longer available.",
 	"documentationLink": "https://github.com/dcmeglio/hubitat-rheem/blob/master/README.md",
 	"communityLink": "https://community.hubitat.com/t/release-rheem-econet-integration/37338",
 	"apps" : [
