--- a/packageManifest.json
+++ b/packageManifest.json
@@ -2,9 +2,9 @@
 	"packageName": "Rheem EcoNet Integration",
 	"minimumHEVersion": "2.1.9",
 	"author": "Dominick Meglio",
-	"version": "2.0.2",
-	"dateReleased": "2020-06-08",
-	"releaseNotes": "Fixed a bug that occassionally caused errors when switching the mode. Added a warning about MQTT.",
+	"version": "2.0.3",
+	"dateReleased": "2020-06-12",
+	"releaseNotes": "Fixed a bug that could cause MQTT disconnects.",
 	"documentationLink": "https://github.com/dcmeglio/hubitat-rheem/blob/master/README.md",
 	"communityLink": "https://community.hubitat.com/t/release-rheem-econet-integration/37338",
 	"apps" : [
