--- a/packageManifest.json
+++ b/packageManifest.json
@@ -2,9 +2,9 @@
 	"packageName": "Rheem EcoNet Integration",
 	"minimumHEVersion": "2.2.2",
 	"author": "Dominick Meglio",
-	"version": "2.1.1",
-	"dateReleased": "2020-08-20",
-	"releaseNotes": "Improved handling of MQTT errors and added retries.",
+	"version": "2.2.0",
+	"dateReleased": "2020-10-11",
+	"releaseNotes": "Added support for devices that only support enable/disable settings.",
 	"documentationLink": "https://github.com/dcmeglio/hubitat-rheem/blob/master/README.md",
 	"communityLink": "https://community.hubitat.com/t/release-rheem-econet-integration/37338",
 	"apps" : [
